--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -13,65 +13,51 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>john@example.com</td>
-                    <td>0912568555755</td>
-                    <td>Admin</td>
-                </tr>
-                <tr>
-                    <td>Mary</td>
-                    <td>Moe</td>
-                    <td>mary@example.com</td>
-                    <td>0912568555755</td>
-                    <td>Admin</td>
-                </tr>
-                <tr>
-                    <td>July</td>
-                    <td>Dooley</td>
-                    <td>july@example.com</td>
-                    <td>0912568555755</td>
-                    <td>Admin</td>
+                <tr *ngFor="let user of users">
+                    <td>{{user.firstname}}</td>
+                    <td>{{user.lastname}}</td>
+                    <td>{{user.email}}</td>
+                    <td>{{user.phone}}</td>
+                    <td>{{user.role}}</td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div class="col-md-5">
-        <form class="form-horizontal" action="/action_page.php">
+        <form class="form-horizontal" [formGroup]="formAddUser" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label class="control-label col-sm-3" for="firstname">Firstname:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="firstname" placeholder="Enter Firstname">
+                    <input type="text" formControlName="firstname" class="form-control" id="firstname" placeholder="Enter Firstname">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3" for="lastname">Lastname:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="lastname" placeholder="Enter Lastname">
+                    <input type="text" formControlName="lastname" class="form-control" id="lastname" placeholder="Enter Lastname">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3" for="email">Email:</label>
                 <div class="col-sm-9">
-                    <input type="email" class="form-control" id="email" placeholder="Enter Email">
+                    <input type="email" formControlName="email" class="form-control" id="email" placeholder="Enter Email">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3" for="phone">Phone:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="phone" placeholder="Enter Phone">
+                    <input type="text" formControlName="phone" class="form-control" id="phone" placeholder="Enter Phone">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3" for="role">Role:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="role" placeholder="Enter Role">
+                    <input type="text" formControlName="role" class="form-control" id="role" placeholder="Enter Role">
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
-                    <button type="submit" class="btn btn-danger">Add New User</button>
+                    <button type="submit" type="submit" class="btn btn-danger"  [disabled]="!formAddUser.valid">Add New User</button>
                 </div>
             </div>
         </form>
