--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -13,7 +13,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let user of users">
+                <!-- <tr *ngFor="let user of users"> -->
+                <tr *ngFor="let user of users | showAdminUsers:filterargs">
                     <td>{{user.firstname}}</td>
                     <td>{{user.lastname}}</td>
                     <td>{{user.email}}</td>
